--- a/src/chrome/popup.html
+++ b/src/chrome/popup.html
@@ -80,11 +80,11 @@
         <h1>Noticing Game</h1>
         <button id="showPanelBtn">Play Noticing Game</button>
         <div class="info">
-            You can also use the "NG" button in the YouTube player controls.
+            You can also use the switch in the bottom right corner of the YouTube player.
         </div>
 
         <div class="about-section">
-            <p><strong>Version:</strong> 0.1.2</p>
+            <p><strong>Version:</strong> 0.2.2</p>
             <p>
                 <strong>Contact:</strong>
                 <a
