--- a/src/chrome/popup.html
+++ b/src/chrome/popup.html
@@ -80,11 +80,12 @@
         <h1>Noticing Game</h1>
         <button id="showPanelBtn">Play Noticing Game</button>
         <div class="info">
-            You can also use the switch in the bottom right corner of the YouTube player.
+            You can also use the switch in the bottom right corner of the
+            YouTube player.
         </div>
 
         <div class="about-section">
-            <p><strong>Version:</strong> 0.2.2</p>
+            <p><strong>Version:</strong> 0.3.2</p>
             <p>
                 <strong>Contact:</strong>
                 <a
@@ -109,6 +110,12 @@
                 4. You get points for correctly noticing words. Be careful!
                 You'll lose points if you click words that haven't appeared
                 recently.
+            </p>
+            <p>
+                <strong>Easy Mode:</strong> Enable "Pause timers when video
+                stops" in settings to pause word timers when you pause the
+                video, giving you unlimited time to notice words while the video
+                is stopped.
             </p>
 
             <p><em>Developed by: Rafael Hernandez Bustamante</em></p>
